# yunpy

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/yunpy/example_input/Shijing-demo/: poem2.txt  poem3.txt  poem4.txt  poem5.txt
src/yunpy/sources/: phonoML_characters.csv
