[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "yunpy"
version = "0.1.0"
description = "A library for phonetic annotation in Middle Chinese"
keywords = ["phonetics", "phonology", "Middle Chinese", "chinese", "linguistics", "historical linguistics"]
authors = [
    {name = "Alexander DELAPORTE", email = "alexander.delaporte@cnrs.fr"},
    {name = "Qingqing XIE", email = "qingqing.hsieh@gmail.com"},
]
maintainers = [
  {name = "Alexander DELAPORTE", email = "alexander.delaporte@cnrs.fr"}
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*", "AUTHORS.md"]
dependencies = [
    "yunpy==0.1.0",
    "pip>=25.1.1",
    "pytest>=8.4.1",
    "setuptools>=80.9.0,<=81.0",
    "wheel>=0.45.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"yunpy" = ["sources/*.csv", "example_input/*.txt"]

[project.urls]
Repository = "https://github.com/yunpy"

[project.scripts]
database = "yunpy.cli:show_database_stats"
howtoread = "yunpy.cli:show_character_readings"
charinfo = "yunpy.cli:show_character_info"
webanno = "yunpy.cli:convert_to_webanno"
yunpyxml = "yunpy.cli:convert_to_xml"